--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       li a {
         color: red;
       }
+      #highlight {
+        background-color: orange;
+      }
       #exec-bio {
         background-color: lightgray;
       }
@@ -16,6 +19,9 @@
       .bio-box a {
         color: green;
       }
+      .azure-bg {
+        background-color: azure;
+      }
     </style>
   </head>
   <body>
@@ -24,7 +30,7 @@
       <li>
         <a href="https://example.com/">Link</a>
       </li>
-      <li>
+      <li id="highlight">
         <a href="https://example.com/">Link</a>
       </li>
       <li>
@@ -32,16 +38,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box">
+    <div id="exec-bio" class="bio-box azure-bg">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box azure-bg">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box azure-bg">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box azure-bg">
       <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
